--- a/frontend/src/theme/variables.css
+++ b/frontend/src/theme/variables.css
@@ -40,3 +40,5 @@
   --ion-text-color: var(--ion-color-dark);
   --ion-background-color: var(--ion-color-light);
 }
+
+/* accent color should be blue: #4A90E2 */
