--- a/frontend/src/theme/styles.css
+++ b/frontend/src/theme/styles.css
@@ -133,7 +133,7 @@ ion-content {
   --padding-top: 22px;
   --padding-start: 14px;
   --padding-end: 14px;
-  font-size: 13px;
+  font-size: 13px !important;
 }
 
 ion-header {
@@ -146,6 +146,7 @@ ion-toolbar {
   --border-style: solid;
   --border-color: var(--ion-border-color);
   box-shadow: none;
+  text-align: center;
 }
 
 ion-title {
@@ -153,6 +154,18 @@ ion-title {
   opacity: 0.6;
   font-weight: 400;
   font-size: 16px;
+}
+
+ion-title.centered-title {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  pointer-events: none;
 }
 
 /* general selection */
@@ -295,4 +308,32 @@ ion-select-popover ion-radio {
   background: var(--ion-color-secondary);
   border: 1px solid var(--ion-border-color);
   border-radius: 8px;
+}
+
+.inner-page {
+  --padding-top: 5px; !important;
+}
+
+.nutrient-input {
+  font-size: 12px !important;
+}
+
+.serving-size {
+  --padding-start: 0;
+  --padding-end: 0;
+  --inner-padding-end: 0;
+  --inner-padding-start: 0;
+  width: 110%;
+}
+
+.food-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid var(--ion-border-color);
+  border-radius: 10px;
+  background: var(--ion-color-secondary);
+  margin-bottom: 10px;
+  padding: 10px 5px 10px 5px;
 }
