--- a/frontend/src/theme/styles.css
+++ b/frontend/src/theme/styles.css
@@ -72,14 +72,14 @@ ion-input[fill="solid"] {
   --background: rgba(0, 0, 0, 0.03);
   --background-focused: #FFFFFF;
   --border-radius: 4px;
-  
+
   --border-width: 0;
   --border-color: transparent;
-  
+
   --border-width-focused: 1px;
   --border-style-focused: solid;
   --border-color-focused: rgba(74, 144, 226, 0.5);
-  
+
   --padding-start: 10px !important;
   --padding-end: 10px !important;
   --padding-top: 4px !important;
@@ -352,9 +352,9 @@ ion-select-popover ion-radio {
 
 .search-controls {
   display: absolute;
-  paddingBottom: 10px;
+  padding-bottom: 10px;
   top: 0px;
-  zIndex: 10;
+  z-index: 10;
 }
 
 .food-view-name {
@@ -363,4 +363,15 @@ ion-select-popover ion-radio {
 
 .bold-icon {
   --ionicon-stroke-width: 55px;
+}
+
+.save-header-button {
+
+}
+
+.delete-header-button {
+}
+
+.time-input {
+
 }
