--- a/frontend/src/theme/styles.css
+++ b/frontend/src/theme/styles.css
@@ -267,7 +267,8 @@ ion-select-popover ion-radio {
 
 .auth-box .auth-toggle {
   font-size: 11px;
-  text-align: right;
+  margin-left: auto;
+  width: fit-content;
 }
 
 .auth-box h1 {
@@ -276,6 +277,7 @@ ion-select-popover ion-radio {
 
 .auth-box ion-input {
   padding: 0px;
+  font-size: 12px;
 }
 
 .horizontal-strip {
@@ -373,5 +375,9 @@ ion-select-popover ion-radio {
 }
 
 .time-input {
+
+}
+
+.custom-input {
 
 }
