--- a/frontend/src/theme/styles.css
+++ b/frontend/src/theme/styles.css
@@ -1,12 +1,3 @@
-hr {
-  border: none !important;
-  border-top: 2px solid var(--ion-color-primary) !important;
-  margin: 16px 0 !important;
-  background: none !important;
-  height: 0 !important;
-  opacity: 0.2 !important;
-}
-
 ion-modal.centered-modal {
   --width: 80%;
   --max-width: 400px;
@@ -438,6 +429,13 @@ ion-tab-button ion-icon {
   padding: 24px;
   border-radius: 4px;
 }
+
+svg path {
+  stroke: var(--ion-color-tertiary);
+}
+
+svg line { stroke: var(--ion-text-color); }
+.spacing-line { stroke: var(--ion-border-color); }
 
 .auth-box h1 {
   text-align: center;
